--- a/style.css
+++ b/style.css
@@ -3,9 +3,31 @@
     font-family: 'Roboto', sans-serif;
     background-color: rgb(125, 116, 106);
     color: white;
+    text-align: center;   
 }
-
+#name h1{font-size: 10vh;}
 h2 {color: hsl(196, 100%, 50%);}
 h3 {color: #000;}
+
+nav {
+    border-style: solid;
+    border-color: hsl(196, 100%, 50%);
+    border-width: 2px;
+    border-radius: 25px;
+    font-size: 14pt;
+}
+
+table, th, td {
+    border-style: solid;
+    border-collapse: collapse;
+    border-color: white;
+    border-width: 2px;
+    font-size: 2vw;
+}
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+th {color: hsl(196, 100%, 50%);}
 
 #fcolor {color:#ff0077;}
