--- a/style.css
+++ b/style.css
@@ -19,15 +19,19 @@ h3 {
 nav{
     font-size: 14pt;
     background-color: #333;
-    padding-bottom: 25px;
+    padding-bottom: 15px;
     margin-bottom: 10px;
     position: sticky;
     top: 0;
     z-index: 1;
 }
 
+nav a{
+    padding: 0px 10px 0px 10px;
+}
+
 #name {
-    padding-top: 10px;
+    padding-top: 1px;
 }
 ul, ol {
     display: table;
